i alignment fix on add to cart button / text

--- a/src/utility.css
+++ b/src/utility.css
@@ -62,3 +62,7 @@ p {
 .pointer {
     cursor: pointer;
 }
+
+.margin-left-min1 {
+    margin-left: -1rem;
+}
